# Synonym-Service-project

./: .env  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  seed.sql
app/: main.py
app/api/: routes.py
app/cache/: interfaces.py  memory.py  redis_backend.py
app/core/: logging.py  settings.py
app/db/: repository.py
app/services/: synonyms.py
db/: init.sql
synonym_service.egg-info/: SOURCES.txt  requires.txt
tests/: test_api_contract.py  test_cache_memory.py
