[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "synonym-service"
version = "0.1.0"
description = "Data Engine Synonym System - FastAPI + SQLModel with Redis/InMemory cache"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic-settings>=2.4",
  "sqlmodel>=0.0.22",
  "sqlalchemy>=2.0",
  "pyodbc>=5.1",  # for SQL Server
  "orjson>=3.10",
  "redis>=5.0",
  "structlog>=24.1",
  "tenacity>=9.0",
  "typing-extensions>=4.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "ruff>=0.6",
  "mypy>=1.11",
  "types-redis>=4.6.0.20241004",
]

[tool.ruff]
line-length = 100
select = ["E","F","I","N","UP","S","B"]
ignore = ["S101"]

[tool.mypy]
python_version = "3.10"
strict = true
plugins = []

[tool.pytest.ini_options]
asyncio_mode = "auto"
